<resources>
    <string name="app_name">DAT153-Oblig1-G1</string>
    <string name="heading_main_activity">Quizzier</string>
    <string name="button_go_to_quiz_activity">start quiz</string>
    <string name="button_go_to_gallery_activity">gallery</string>

    <string name="gallery_heading">Quiz gallery</string>
    <string name="gallery_add_button">Add quiz entry</string>
    <string name="gallery_recycler_view_init_name">Name placeholder</string>
    <string name="gallery_sort_button_asc">A-Z</string>
    <string name="gallery_sort_button_desc">Z-A</string>

    <string name="quiz_heading">Animal quiz | Score: %1$s/%2$s</string>
    <string name="quiz_image">Quiz image</string>
    <string name="quiz_question">What kind of animal?</string>
    <string name="quiz_default_answer_a">answer A</string>
    <string name="quiz_default_answer_b">answer B</string>
    <string name="quiz_default_answer_c">answer C</string>
    <string name="quiz_submit_button1">Submit</string>
    <string name="quiz_submit_button2">Next</string>
    <string name="quiz_quit_button">Quit</string>

    <string name="quiz_submit_fragment">Submit</string>

    <string name="quiz_next_fragment">Next</string>

    <string name="add_entry_heading">Add quiz entry</string>
    <string name="add_picture_button">Add picture from gallery</string>
    <string name="add_answer_default_text">write the answer</string>
    <string name="add_entry_button">Add</string>

    <string name="result_heading">Result</string>
    <string name="result_return_button">Return to menu</string>
    <string name="result_score_header">Score:</string>
    <string name="result_score">%1$s / %2$s</string>
</resources>