<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddQuizEntryActivity">

    <TextView
        android:id="@+id/add_new_entry_heading"
        android:layout_width="410dp"
        android:layout_height="85dp"
        android:gravity="center"
        android:text="@string/add_entry_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/add_picture_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_new_entry_heading"
        app:layout_constraintVertical_bias="0.458" />

    <ImageView
        android:id="@+id/add_entry_image"
        android:layout_width="163dp"
        android:layout_height="173dp"
        app:layout_constraintBottom_toTopOf="@+id/add_picture_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_new_entry_heading"
        app:layout_constraintVertical_bias="0.658"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/add_entry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_entry_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_entry_image"
        app:layout_constraintVertical_bias="0.717" />

    <EditText
        android:id="@+id/add_entry_answer_input_text_field"
        android:layout_width="218dp"
        android:layout_height="49dp"
        android:hint="@string/add_answer_default_text"
        app:layout_constraintBottom_toTopOf="@+id/add_entry_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_picture_button"
        app:layout_constraintVertical_bias="0.484" />

</androidx.constraintlayout.widget.ConstraintLayout>